[workspace]
resolver = "2"
members = [
    "nari-freetype",
    "nari-platform",
    "nari-studio",
    "nari-vello",
    "nari-path",
    "nari-ir",
    "nari-gpu",
    "nari-ochre",
]

[workspace.dependencies]
nari-freetype = { path = "nari-freetype" }
nari-platform = { path = "nari-platform" }
nari-vello = { path = "nari-vello" }
nari-ochre = { path = "nari-ochre" }
nari-gpu = { path = "nari-gpu" }

superluminal-perf = "0.2"
vello = { git = "https://github.com/msiglreith/vello.git", branch = "nari" }
swash = { git = "https://github.com/msiglreith/swash.git", branch = "nari" }
raw-window-handle = "0.5"
anyhow = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
