[workspace]
resolver = "2"
members = [
    "nari-platform",
    "nari-studio",
    "nari-vello",
    "nari-path",
    "nari-gpu",
    "nari-ochre", "nari-decor-basic",
]

[workspace.dependencies]
nari-platform = { path = "nari-platform" }
nari-vello = { path = "nari-vello" }
nari-ochre = { path = "nari-ochre" }
nari-gpu = { path = "nari-gpu" }
nari-decor-basic = { path = "nari-decor-basic" }

superluminal-perf = "0.2"
vello = { path = "../vello" } # { git = "https://github.com/msiglreith/vello.git", branch = "nari_v2" }
swash = { git = "https://github.com/msiglreith/swash.git", branch = "nari" }
raw-window-handle = "0.6"
anyhow = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
