[workspace]
resolver = "2"
members = [
    "nari-platform",
    "nari-studio",
    "nari-vello",
    "nari-path",
    "nari-gpu",
    "nari-ochre",
    "nari-decor-basic",
    "nari-ir",
    "nari-x64", "nari-gpu-d3d12",
]

[workspace.dependencies]
nari-platform = { path = "nari-platform" }
nari-vello = { path = "nari-vello" }
nari-ochre = { path = "nari-ochre" }
nari-gpu = { path = "nari-gpu" }
nari-decor-basic = { path = "nari-decor-basic" }

superluminal-perf = "0.2"
vello = { git = "https://github.com/msiglreith/vello.git", branch = "nari_v3" }
parley = { path = "../parley/parley" }
raw-window-handle = { version = "0.6.2", features = ["std"] }
anyhow = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
