[package]
name = "nari-canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nari-gpu.workspace = true
nari-ochre.workspace = true
nari-freetype.workspace = true
zeno = "0.2"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
unicode-segmentation = "1.9"
swash = { git = "https://github.com/msiglreith/swash.git", branch = "nari" }

[dev-dependencies]
anyhow = "1"
winit = { path = "../../winit" } # "0.27.2"
image =  { version = "0.23", default-features = false, features = ["png"] }
usvg = { version = "0.22", default-features = false }
