[package]
name = "nari-gpu-d3d12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle.workspace = true
anyhow.workspace = true # remove
gpu-allocator = "0.27.0"
hassle-rs = "0.11.0"

[dev-dependencies]
nari-platform.workspace = true
