[package]
name = "nari-gpu"
version = "0.1.0"
edition = "2021"
workspace = ".."

[lib]

[dependencies]
ash = { git = "https://github.com/ash-rs/ash.git", rev = "86dccdf" }
ash-window = { git = "https://github.com/ash-rs/ash.git", rev = "86dccdf" }
gpu-allocator = { git = "https://github.com/msiglreith/gpu-allocator.git", branch = "ash-86dccdf" }

raw-window-handle.workspace = true
anyhow.workspace = true # remove

[dev-dependencies]
nari-platform.workspace = true