[package]
name = "nari-ochre"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>", "msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
workspace = ".."

[dependencies]
zeno = "0.2"

[dev-dependencies]
image =  { version = "0.23", default-features = false, features = ["png"] }
usvg = { version = "0.22", default-features = false }
