[package]
name = "nari-platform"
version = "0.1.0"
edition = "2021"
workspace = ".."

[lib]

[dependencies]
raw-window-handle.workspace = true
bitflags = "1"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.45"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_SystemServices",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
]

[dev-dependencies]
anyhow = "1"
softbuffer = "0.3"
