[package]
name = "nari-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9"
pollster = "0.2"
usvg = "0.30"
hashbrown = "0.13"
ahash = "0.8"

anyhow.workspace = true
nari-platform.workspace = true
nari-vello.workspace = true
