[package]
name = "nari-vello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello.workspace = true
nari-freetype.workspace = true
nari-platform.workspace = true
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
unicode-segmentation = "1.9"
swash.workspace = true
wgpu = "0.15"
raw-window-handle.workspace = true

[dev-dependencies]
anyhow = "1"
pollster = "0.2"
superluminal-perf.workspace = true