[package]
name = "nari-vello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello.workspace = true
nari-platform.workspace = true
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
wgpu = "0.19"
raw-window-handle.workspace = true
usvg = "0.30"
anyhow.workspace = true
skrifa = "0.19"
parley.workspace = true

[dev-dependencies]
pollster = "0.2"
superluminal-perf.workspace = true
nari-decor-basic.workspace = true
